[package]
name = "reckless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.24"
env_logger = "0.10.0"
gcp_auth = "0.8.0"
log = "0.4.17"
serde = "1.0.163"
toml = "0.7.4"
