[package]
name = "reccon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.24"
env_logger = "0.10.0"
gcp_auth = "0.8.0"
log = "0.4.17"
memchr = "2.5.0"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["rustls-tls"], default-features = false }
serde = "1.0.163"
serde_json = "1.0.102"
systemd-journal-logger = "1.0.0"
tokio = { version = "1.28.1", features = ["full"] }
toml = "0.7.4"
urlencoding = "2.1.2"
